--- a/sky-server/src/main/resources/application.yml
+++ b/sky-server/src/main/resources/application.yml
@@ -13,6 +13,23 @@ spring:
       username: ${sky.datasource.username}
       password: ${sky.datasource.password}
 
+  servlet:
+    multipart:
+      max-file-size: 50MB
+      max-request-size: 50MB
+
+  redis:
+    host: ${sky.redis.host}
+    port: ${sky.redis.port}
+    database: ${sky.redis.database}
+
+  aliyun:
+    oss:
+      endpoint: ${sky.aliyun.oss.endpoint}
+      bucketName: ${sky.aliyun.oss.bucketName}
+      region: ${sky.aliyun.oss.region}
+
+
 mybatis:
   #mapper配置文件
   mapper-locations: classpath:mapper/*.xml
@@ -34,6 +51,6 @@ sky:
     # 设置jwt签名加密时使用的秘钥
     admin-secret-key: Yilena
     # 设置jwt过期时间
-    admin-ttl: 7200000
+    admin-ttl: 720000000
     # 设置前端传递过来的令牌名称
     admin-token-name: token
