--- a/sky-server/src/main/resources/application.yml
+++ b/sky-server/src/main/resources/application.yml
@@ -18,16 +18,7 @@ spring:
       max-file-size: 50MB
       max-request-size: 50MB
 
-  redis:
-    host: ${sky.redis.host}
-    port: ${sky.redis.port}
-    database: ${sky.redis.database}
 
-  aliyun:
-    oss:
-      endpoint: ${sky.aliyun.oss.endpoint}
-      bucketName: ${sky.aliyun.oss.bucketName}
-      region: ${sky.aliyun.oss.region}
 
 
 mybatis:
@@ -54,3 +45,21 @@ sky:
     admin-ttl: 720000000
     # 设置前端传递过来的令牌名称
     admin-token-name: token
+    user-token-name: authentication
+    user-secret-key: Yilena
+    user-ttl: 720000000
+
+  redis:
+    host: ${sky.redis.host}
+    port: ${sky.redis.port}
+    database: ${sky.redis.database}
+
+  aliyun:
+    oss:
+      endpoint: ${sky.aliyun.oss.endpoint}
+      bucketName: ${sky.aliyun.oss.bucketName}
+      region: ${sky.aliyun.oss.region}
+
+  wechat:
+    appid: ${sky.wechat.appid}
+    secret: ${sky.wechat.secret}
